--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,10 +33,7 @@
   max-width: 200px;
   color: grey;
   height: calc(100vh - 80px);
-}
-
-.sidebar > div {
-  height: calc(100%/2);
+  justify-content: space-between;
 }
 
 
@@ -68,7 +65,7 @@
   padding: 5px 10px;
 }
 
-.sidebar_top a {
+.sidebar a {
   text-decoration: none;
   color: grey;
 }
@@ -100,7 +97,8 @@
 
 /* sidebar_bottom */
 .sidebar_bottom {
-align-items: flex-end;
+justify-content: flex-end;
+padding: 0 10px;
 }
 /* /sidebar_bottom */
 
