--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,9 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: 'Montserrat', sans-serif;
+}
 
 /* utility class */
 .wrapper {
@@ -20,7 +23,9 @@
   flex-direction: column;
 }
 
+/* color */
 
+/* /color */
 /* /utility class */
 #site-content {
   height: calc(100% - 80px);
@@ -36,22 +41,16 @@
   justify-content: space-between;
 }
 
-
-
 /* sidebar_top */
-
 .sidebar_top {
   padding: 15px 0px;
-
 }
 
 .sidebar_top .logo {
   width: 70%;
   margin-bottom: 10px;
   padding: 0 10px;
-
 }
-
 
 .sidebar_top img {
   width: 15%;
@@ -93,18 +92,39 @@
 }
 
 /* /sidebar_top */
-
-
 /* sidebar_bottom */
 .sidebar_bottom {
-justify-content: flex-end;
-padding: 0 10px;
+  justify-content: flex-end;
+  padding: 0 10px;
 }
+
+.sidebar_bottom i {
+  margin-right: 5px;
+}
+
+.sidebar_bottom>div {
+  padding: 5px 0;
+}
+
+.installa_app {
+  border-bottom: 1px solid grey;
+}
+
+.installa_app i {
+  font-size: 0.8em;
+  background-color: black;
+}
+
+.artist i {
+  font-size: 1.4em;
+}
+
+.artist h5 {
+  display: inline-block;
+  color: white;
+}
+
 /* /sidebar_bottom */
-
-
-
-
 /* /sidebar */
 /* main_content */
 /* subscribe_banner */
