--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,14 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
+ul {
+  list-style: none;
+}
+
+a {
+  color: grey;
+}
+
 /* utility class */
 .wrapper {
   height: 100vh;
@@ -63,10 +71,6 @@ body {
 .sidebar_top img {
   width: 15%;
   color: grey;
-}
-
-.sidebar ul {
-  list-style: none;
 }
 
 .sidebar li {
@@ -172,6 +176,8 @@ body {
 
 
 /* /subscribe_banner */
+
+
 .main_content {
   background-color: #121212;
   width: calc(100% - 200px);
@@ -182,6 +188,20 @@ body {
   color: white;
 }
 
+
+nav {
+  padding: 20px 10px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+nav > div {
+margin: 10px 10px;
+}
+
+.navbar_menu a {
+    text-decoration: none;
+}
 /* /main_content */
 /* player */
 .player {
