--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,7 @@ a {
   color: grey;
   height: calc(100vh - 80px);
   justify-content: space-between;
+  overflow: hidden;
 }
 
 .sidebar li:hover {
@@ -89,6 +90,10 @@ a {
 
 .sidebar_top i {
   font-size: 2.5em;
+}
+
+.nome_playlist {
+  overflow-y: scroll;
 }
 
 .playlist_text {
@@ -179,7 +184,7 @@ a {
 
 
 .main_content {
-  background-color: #121212;
+  background-color: #141922;
   width: calc(100% - 200px);
   padding: 20px;
   overflow-y: auto;
@@ -190,7 +195,7 @@ a {
 
 
 nav {
-  padding: 20px 10px;
+  padding: 10px 10px;
   justify-content: center;
   flex-wrap: wrap;
 }
@@ -201,6 +206,10 @@ margin: 10px 10px;
 
 .navbar_menu a {
     text-decoration: none;
+}
+
+.navbar_menu a:hover {
+  color: grey;
 }
 /* /main_content */
 /* player */
