--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,9 @@ a {
 }
 
 /* color */
+
+ .black {color: black;}
+
 /* /color */
 /* /utility class */
 #site-content {
@@ -53,9 +56,11 @@ a {
   border-left: 2px solid lightgreen;
 }
 
-.sidebar a:hover {
-  color: white;
+.sidebar li a:hover {
+  color: lightgrey;
 }
+
+
 
 /* sidebar_top */
 .sidebar_top {
@@ -68,9 +73,9 @@ a {
   padding: 0 10px;
 }
 
-.sidebar_top img {
-  width: 15%;
-  color: grey;
+.sidebar_top i{
+  font-size: 25px;
+  margin-right: 5px;
 }
 
 .sidebar li {
@@ -86,9 +91,6 @@ a {
   margin: 10px 0;
 }
 
-.sidebar_top i {
-  font-size: 2.5em;
-}
 
 .nome_playlist {
   overflow-y: scroll;
@@ -104,9 +106,14 @@ a {
   padding: 0 10px;
 }
 
+.crea_playlist_icon {
+  background: grey;
+  padding: 8px;
+}
+
 .crea_playlist_text {
   align-self: center;
-  margin-left: 10px;
+  margin-left: 5px;
 }
 
 /* /sidebar_top */
@@ -198,7 +205,7 @@ nav {
   flex-wrap: wrap;
 }
 
-nav>div {
+nav > div {
   margin: 10px 10px;
 }
 
@@ -344,6 +351,7 @@ width: 200px;
 
 .player_center {
   flex-grow: 2;
+  align-items: center;
 }
 
 /* /player_center */
@@ -353,7 +361,7 @@ width: 200px;
   padding: 10px;
 }
 
-.player_right > * {
+.player_right > i {
   padding: 0 10px;
 }
 
