--- a/assets/mediaquery/mediaquery.css
+++ b/assets/mediaquery/mediaquery.css
@@ -1,22 +1,35 @@
 @media all and (max-width:420px) {
+  .card_main_content {
+    width: calc(100%/2);
+  }
 
 }
 
 
 @media all and (max-width:768px) {
-
+  .card_main_content {
+    width: calc(100%/2);
+  }
 }
+
+/* medium */
 
 @media all and (min-width: 769px) and (max-width: 991px) {
 
-
+.card_main_content {
+  width: calc(100%/4);
+}
 }
 
 @media all and (min-width: 992px) and (max-width: 1200px) {
-
+  .card_main_content {
+    width: calc(100%/6);
+  }
 
 }
 
 @media all and (min-width: 1201px) {
-
+  .card_main_content {
+    width: calc(100%/6);
+  }
 }
