--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,7 +92,7 @@ a {
 
 
 .nome_playlist {
-  overflow-y: auto;
+  overflow-y: ;
 }
 
 .playlist_text {
@@ -195,11 +195,11 @@ a {
 }
 
 .sidebar_mobile img {
-  height: 30px;
+  height: 25px;
 }
 
 .sidebar_mobile i {
-  font-size: 25px;
+  font-size: 20px;
 }
 
 .sidebar_mobile_bottom {
@@ -283,7 +283,7 @@ nav > div {
 }
 
 .navbar_menu a:hover {
-  border-bottom: 2px solid green;
+  border-bottom: 2px solid lightgreen;
   color: lightgrey;
 }
 
@@ -437,10 +437,11 @@ justify-content: space-around;
   flex-wrap: wrap;
 }
 
-.player_left_icons i {
-  color: grey;
-  padding: 0 5px;
+
+.player_left_icons a:hover {
+  color: white;
 }
+
 /* /player_left */
 
 /* player_center */
@@ -464,6 +465,10 @@ justify-content: space-around;
   font-size: 2em;
 }
 
+#play_icon_player:hover {
+  transform: scale(1.3);
+  transition: 0.2s;
+}
 
 .player_track {
   width: 100%;
