--- a/assets/mediaquery/mediaquery.css
+++ b/assets/mediaquery/mediaquery.css
@@ -2,6 +2,10 @@
   .nome_playlist {
     overflow-y: scroll;
   }
+
+  .sidebar_mobile_bottom > a {
+    display: none;
+  }
 }
 
 @media all and (max-width:420px) {
