--- a/assets/mediaquery/mediaquery.css
+++ b/assets/mediaquery/mediaquery.css
@@ -1,6 +1,8 @@
 @media all and (max-height:540px) {
   .nome_playlist {
     overflow-y: scroll;
+    overflow-x: hidden;
+    height: 100px;
   }
 
   .sidebar_mobile_bottom > a {
